--- a/stories/Components/Charts/BarChart/BarChart.stories.mdx
+++ b/stories/Components/Charts/BarChart/BarChart.stories.mdx
@@ -39,7 +39,7 @@ Below is an example of the `BarChart` component wrapped inside the `Fetcher` com
   <Story name="BarChart with Fetcher">
     {() => (
       <Fetcher
-        api="https://sfvc-migration.undrr.org/api/v2/content/commitments-metrics?items_per_page=1000"
+        api="https://sfvc-migration.undrr.org/api/v2/content/commitments-metrics"
         queryParams={{items_per_page:1000}}
         render={({ isLoading, data }) => (
           <>
@@ -48,7 +48,7 @@ Below is an example of the `BarChart` component wrapped inside the `Fetcher` com
             ) : (
               <BarChart
                 data={data}                width={1000}
-                height={600}
+                height={400}
                 labelColor="#9CA3AF"
                 axisColor="#9CA3AF"
                 tickColor="#9FAAAE"
@@ -76,7 +76,7 @@ import Fetcher from '../../Fetcher/Fetcher';
 
 const BarChartWithOrganisation = () => (
   <Fetcher
-    api="https://sfvc-migration.undrr.org/api/v2/content/commitments-metrics?items_per_page=1000"
+    api="https://sfvc-migration.undrr.org/api/v2/content/commitments-metrics"
     queryParams={{items_per_page:1000}}
     render={({ isLoading, data }) => (
       <>
@@ -86,11 +86,11 @@ const BarChartWithOrganisation = () => (
           <BarChart
             data={data}
             width={1000}
-            height={600}
+            height={400}
             labelColor="#9CA3AF"
             axisColor="#9CA3AF"
             tickColor="#9FAAAE"
-            title="Commitments by Year"
+            title="Commitments by Organisations"
             xAxisLabel="Year"
             yAxisLabel="Number of Commitments"
             dataSource="Data from fetched API"
@@ -116,7 +116,7 @@ Below is an example of the `BarChart` component wrapped inside the `Fetcher` com
   <Story name="BarChart for Organisations">
     {() => (
       <Fetcher
-        api="https://sfvc-migration.undrr.org/api/v2/content/commitments-metrics?items_per_page=1000"
+        api="https://sfvc-migration.undrr.org/api/v2/content/commitments-metrics"
         queryParams={{items_per_page:1000}}
         render={({ isLoading, data }) => (
           <>
@@ -125,14 +125,14 @@ Below is an example of the `BarChart` component wrapped inside the `Fetcher` com
             ) : (
               <BarChart
                 data={data}                width={1000}
-                height={600}
+                height={400}
                 labelColor="#9CA3AF"
                 axisColor="#9CA3AF"
                 tickColor="#9FAAAE"
-                title="Commitments by Year"
+                title="Commitments by Organisations"
                 type="ORGANISATIONS"
-                xAxisLabel="Year"
-                yAxisLabel="Number of Commitments"
+                xAxisLabel="Years"
+                yAxisLabel="Number of Organisations"
                 dataSource="Data from fetched API"
                 ariaLabel="Bar chart showing the number of commitments by year"
                 ariaDescription="This chart displays the number of commitments made each year based on fetched API data."
@@ -154,7 +154,7 @@ import Fetcher from '../../Fetcher/Fetcher';
 
 const BarChartWithFetcher = () => (
   <Fetcher
-    api="https://sfvc-migration.undrr.org/api/v2/content/commitments-metrics?items_per_page=1000"
+    api="https://sfvc-migration.undrr.org/api/v2/content/commitments-metrics"
     queryParams={{items_per_page:1000}}
     render={({ isLoading, data }) => (
       <>
@@ -164,7 +164,7 @@ const BarChartWithFetcher = () => (
           <BarChart
             data={data}
             width={1000}
-            height={600}
+            height={400}
             labelColor="#9CA3AF"
             axisColor="#9CA3AF"
             tickColor="#9FAAAE"
